navbar gap fixed

--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ nav li a{
     color: #003755 !important;
 }
 
+ul{
+    margin: 0 -15px !important;
+}
+
 .slider-div{
     margin-top: 30px;
     margin-top: 30px;
